--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,28 @@
+<div class="position">
+  <div class="container-fluid subscribe">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 subscribe-text">
+                  <h2>Subscribe to Our Newsletter</h2>
+                  <p>Get-email updates about our latest shops and special offers</p>
+              </div>
+              <div class="col-md-6 subscribe-form">
+                  <form>
+                      <div class="form-group">
+                          <input class="form-control" type="text" placeholder="Enter email address">
+                          <input type="submit" value="Subccribe">
+                      </div>    
+                  </form>
+              </div>
+          </div>    
+      </div>
+  </div>
+
+  <div class="navigate-top">
+      <a href="#"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
+  </div>
+</div>    
+
 <footer class="footer-widget">
   <div class="container">
     <div class="data">
@@ -44,7 +69,7 @@
         </div>
       </div>
       <div class="copyright-text">
-        <p>Copyright All rights reserved</p>
+        <p>Copyright &copy; 2019  All rights reserved | By M@csofTechnologies</p>
       </div>
     </div>
   </div>
