--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -51,8 +51,8 @@
   p {
     // color: gray;
     text-align: center;
-    font-family: poppins,Arial,sans-serif;
-    font-size: 15px;
+    // font-family: poppins,Arial,sans-serif;
+    font-size: 13px;
     line-height: 1.8;
     font-weight: 400;
   }
@@ -79,7 +79,7 @@
   padding: 10px;
   /* box-shadow: 0px 2px 5px 0px; */
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.12);
-  margin: 0 8px 20px;
+  margin: 0 8px 38px;
   img {
     height: 125px;
     width: 125px;
@@ -106,11 +106,8 @@
   input {
     height: 32px;
     width: 42px;
+    padding: 1px 3px 5px 1px;
   }
-}
-
-.cement-price1 .cement-input {
-  width: 100px;
 }
 .cart-btn {
   background-color: #82ae46;
@@ -149,7 +146,7 @@
   padding: 10px;
   /* box-shadow: 0px 2px 5px 0px; */
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.12);
-  margin: 0 8px;
+  margin: 0 8px 38px;
 }
 
 .bar-showcase img {
@@ -170,12 +167,15 @@
 .bar-price1 {
   // justify-content:center;
   display: flex;
+  margin-bottom: 0.3rem;
+  input {
+    height: 32px;
+    width: 61px;
+    padding: 1px 3px 5px 1px;
+  }
 }
 
-.bar-price1 input {
-  height: 32px;
-  width: 61px;
-}
+
 
 // .bars-input-name {
 //     height:32px !important;
@@ -232,28 +232,3 @@
   }
 }
 
-/*============ START SUBSCRIBE SECTION================*/
-
-.subscribe{
-  background-color: #f7f6f2;
-  padding: 50px;
-  .subscribe-text { 
-    h2 {
-      color: #000;
-    }
-    p {
-      color: gray !important;
-    }
-  }
-  .subscribe-form {
-    .form-group {
-      display: flex;
-      .form-control {
-        height: 52px;
-      }
-      input[type="submit"] {
-        background-color: #82ae46 !important;
-      }
-     }
-  }
-}
