--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,21 +1,37 @@
-.header-top {
-  background-color: #82ae46;
-  height: 27px;
-  color: #fff;
-  text-align: center;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  // vertical-align: middle;
-  padding: 3px;
-  i {
-    margin-right: 5px;
-  }
-}
+
 .header-widget {
-  border-bottom: solid 2px;
+  border-bottom: solid 1px #f0f0f0;
   background-color: #fff;
   font-family: lato, Roboto, "Helvetica Neue", sans-serif;
+  .header-top {
+    background-color: #82ae46;
+    height: 27px;
+    color: #fff;
+    text-align: center;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    // vertical-align: middle;
+    padding: 3px;
+    .top-text {
+      padding-left: 104px;
+      display: flex;
+      p {
+        padding: 0px 3px 0px 23px;
+      }
+      i {
+        margin-right: 5px;
+      }
+    }  
+    .social-icons {
+      display: flex;
+      padding-left: 340px;
+      i {
+        padding: 0px 33px 0px 5px;
+        font-size: 16px;
+      }
+    }
+  }
 }
 
 .logo-text h2 {
@@ -38,10 +54,10 @@
     right: 30px;
     a {
       font-size: 11px;
-      padding-top: 0.7rem;
-      padding-bottom: 1.5rem;
-      padding-left: 20px;
-      padding-right: 20px;
+      // padding-top: 0.7rem;
+      // padding-bottom: 1.5rem;
+      // padding-left: 20px;
+      // padding-right: 20px;
       font-weight: 400;
       color: #000;
       text-transform: uppercase;
@@ -70,11 +86,11 @@
 }
 .user-image {
   float: left;
-  width: 25px;
-  height: 25px;
+  // width: 25px;
+  // height: 25px;
   border-radius: 50px;
-  margin-right: 10px;
-  margin-top: 7px;
+  margin-right: 7px;
+  margin-top: 8px;
 }
 
 .user-image1 {
