--- a/src/app/shared/login/login.component.scss
+++ b/src/app/shared/login/login.component.scss
@@ -1,14 +1,14 @@
+.signin {
+  background-color: #f7f6f2;
+}
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   .card-header {
     color: #000;
     font-size: 20px;
     font-weight: 600;
+    background-color: #fff;
   }
-}
-.login {
-  margin-top: 100px;
-  margin-bottom: 100px;
 }
 .img {
   background-image: unset;
