--- a/src/app/shared/signup/signup.component.scss
+++ b/src/app/shared/signup/signup.component.scss
@@ -1,3 +1,9 @@
+.signup-form {
+  background-color: #f7f6f2;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 .card {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
@@ -5,6 +11,14 @@
     color: #000;
     font-size: 20px;
     font-weight: 600;
+    background-color: #fff;
+  }
+  .card-body {
+    .form {
+      input {
+        height: 52px !important;
+      }
+    }
   }
 }
 .signUp {
