created Design for about , Changes in login,header,cart,signUP components

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -37,9 +37,9 @@
               </div>
             </div>  
             <div class="product-removal">
-              <button type="button" class="btn btn-xsm btn-danger" (click)="deleteCarItem(0, cart.cart_id)">
-                <i class="fa fa-trash"></i>
-              </button>
+              <div (click)="deleteCarItem(0, cart.cart_id)">
+                <i class="fa fa-times"></i>
+              </div>
             </div>
           
           </div>
