--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,7 +1,7 @@
-<section class="signin">
-  <div class="container">
+<!-- <section class=""> -->
+  <div class="container-fluid signin">
     <div class="row justify-content-sm-center login">
-      <div class="">
+      <div class="col-sm-6 col-md-4">
         <div class="card text-center">
           <div class="card-header">
             Sign in to continue
@@ -34,4 +34,4 @@
       </div>
     </div>
   </div>
-</section>
+<!-- </section> -->
