--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,10 +5,12 @@
         <p class=""><i class="fa fa-phone" aria-hidden="true"></i>+ 8886543210</p>
         <p class=""><i class="fa fa-paper-plane" aria-hidden="true"></i>OrederManagement@info.in</p>
       </div>  
-      <div class="col-md-6 social-icons">
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-facebook-f"></i>
-        <i class="fa fa-instagram"></i>
+      <div class="col-md-6">
+        <div class="social-icons">
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-facebook-f"></i>
+          <i class="fa fa-instagram"></i>
+        </div>  
       </div>
     </div>
   <nav class="navbar navbar-expand-md navbar-fixed-top">
@@ -29,19 +31,22 @@
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="home"><i class="fa fa-home cart-custom"> </i>Home</a>
+          <a class="nav-link" routerLink="home"><i class="fa fa-home cart-custom"></i>Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="about"><i class="fa fa-address-book cart-custom"></i>About</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="cart"><i class="fa fa-shopping-cart  cart-custom"> Cart</i></a>
         </li>
-        <li class="nav-item" *ngIf="!isShowhide" routerLinkActive="active">
-          <a class="nav-link" routerLink="login" 
-            ><i class="fa fa-sign-in cart-custom"> SignIn</i></a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="contact"><i class="fa fa-phone cart-custom"></i>Contact</a>
         </li>
         <li class="nav-item" *ngIf="!isShowhide" routerLinkActive="active">
-          <a class="nav-link" routerLink="signUp" 
-            ><i class="fa fa-user-plus cart-custom"> SignUp</i></a
-          >
+          <a class="nav-link" routerLink="login"><i class="fa fa-sign-in cart-custom"> SignIn</i></a>
+        </li> 
+        <li class="nav-item" *ngIf="!isShowhide" routerLinkActive="active">
+          <a class="nav-link" routerLink="signUp"><i class="fa fa-user-plus cart-custom"> SignUp</i></a>
         </li>
         <li class="nav-item dropdown custom-dropdown" *ngIf="isShowhide">
           <!-- <img src="assets/user.jpg" alt="image" class="user-image" /> -->
