--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="profile">
-    <div class="heading">
+    <!-- <div class="heading">
       <img src="assets/user.jpg" class="image"><button class="icon"><i class="fa fa-pencil"></i></button>
-    </div>
+    </div> -->
     <div class="col-sm-12">
       <div class="row">
         <div class="profile-form margin">
