--- a/src/app/user-layout/profile/profile.component.html
+++ b/src/app/user-layout/profile/profile.component.html
@@ -62,7 +62,7 @@
                   <div class="form-group">
                     <label>Select Type</label>
                     <select class="form-control" name="Type" formControlName = "userType">
-                      <option value="type" disabled >Select</option>
+                      <option value="type" hidden >Select</option>
                       <option value="{{userType.address_type_id}}" *ngFor="let userType of addressTypes">{{userType.type_name}}</option>
                     </select>
                   </div>
