--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,19 +7,19 @@
         </ul>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/caro1.jpg" alt="Los Angeles" width="1100" height="500">
+                <img src="assets/caro1.jpg" alt="" width="1100" height="500">
             </div>
             <div class="carousel-item">
-                <img src="assets/caro2.jpg" alt="Chicago" width="1100" height="500">
+                <img src="assets/caro2.jpg" alt="" width="1100" height="500">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="assets/caro.jpg" alt="New York" width="1100" height="500">
+                <img src="assets/caro.jpg" alt="" width="1100" height="500">
                 <div class="carousel-caption">
                 </div>
             </div>
-        </div>
+        </div> 
         <a class="carousel-control-prev caro-icons" href="#demo" data-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </a>
