--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
     <div class="container cement-section">
         <div class="widget">
             <h2 class="section-heading">Cement Company</h2>
-            <p class="description">Your dreams are like the cement. If you water it with actions, it becomes a hard concrete mass</p>
+            <p class="description1">Your dreams are like the cement. If you water it with actions, it becomes a hard concrete mass</p>
             <div class="row">
                 <div class="col-md-3 pull-center" *ngFor="let item of cementProducts; let i = index">
                     <div class=" cement-showcase">
@@ -70,7 +70,7 @@
     <div class="container bar-section">
         <div class="widget">
             <h2 class="section-heading">Bars</h2>
-            <p class="description">We source Bars from the certified vendors of industry, who manufacture these Steel Bars using premium quality raw materials.</p>
+            <p class="description1">We source Bars from the certified vendors of industry, who manufacture these Steel Bars using premium quality raw materials.</p>
             <div class="row">
                 <div class="col-md-3" *ngFor="let product of barsProducts; let k = index">
                     <div class="bar-showcase">
@@ -115,7 +115,7 @@
     <div class="container customer-report">
         <div class="widget">
             <h2 class="section-heading">Our Satisfied Customer says</h2>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
+            <p class="description1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
             <div class="row">
                 <div class="col-md-4">
                     <div class="customer-profile">
