--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,12 +7,12 @@
                   <p>Get-email updates about our latest shops and special offers</p>
               </div>
               <div class="col-md-6 subscribe-form">
-                  <form>
-                      <div class="form-group">
-                          <input class="form-control" type="text" placeholder="Enter email address">
-                          <input type="submit" value="Subccribe">
-                      </div>    
-                  </form>
+                <form>
+                  <div class="form-group">
+                    <input class="form-control" type="text" placeholder="Enter email address">
+                    <input type="submit" value="Subccribe">
+                  </div>    
+                </form>
               </div>
           </div>    
       </div>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="copyright-text">
-        <p>Copyright &copy; 2019  All rights reserved | By M@csofTechnologies</p>
+        <p>Copyright &copy; 2019  All rights reserved By MacsofTechnologies</p>
       </div>
     </div>
   </div>
