--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,4 @@
+@import "../../../manual-Styles/custom-styles.scss";
 .footer-widget {
   font-family: lato, Roboto, "Helvetica Neue", sans-serif;
   background-color: #fff;
@@ -7,29 +8,38 @@
 
 .data {
   padding: 130px 10px 10px 10px;
-  // .footer-content {
-  //     // text-align: center;
-  // }
+  @include mobile {
+    padding: 64px 10px 10px 10px;
+  }
 }
 .company-name {
-  font-size: 24px;
+  font-size: 27px;
 }
 .company-desc {
   padding-right: 42px;
+  @include mobile {
+    font-size: 14px;
+  }
 }
 .social-icons {
   i {
     margin: 10px;
     font-size: 26px;
+    @include mobile {
+      font-size: 19px;
+    }
   }
 }
 .footer-content {
+  @include mobile {
+    margin-bottom: 13px;
+  }
   .footer-links {
     // text-align: center;
-    font-size: 20px;
+    font-size: 27px;
     text-decoration: none;
     font-weight: 400;
-    color: #000 !important;
+    color: #82ae46 !important;
     &:hover {
       color: #000 !important;
     }
@@ -55,10 +65,18 @@
 .list1 li {
   list-style-type: none;
   margin-bottom: 8px;
+  font-size: 18px;
+  @include mobile {
+    font-size: 14px;
+  }
 }
 
 .list1 li a {
   text-decoration: none;
+  font-size: 18px;
+  @include mobile {
+    font-size: 14px;
+  }
 }
 .copyright-text {
   text-align: center;
@@ -73,16 +91,30 @@
     background-color: #f7f6f2;
     padding: 50px;
     .subscribe-text { 
+      @include mobile {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
       h2 {
         color: #000;
+        @include mobile {
+          font-size: 20px;
+        }
       }
       p {
         color: gray !important;
+        @include mobile { 
+          padding-top: 7px;
+        }  
       }
     }
     .subscribe-form {
       .form-group {
         display: flex;
+        @include mobile {
+          margin-left: -37px;
+          margin-top: 13px;
+        }
         input {
           border: 1px solid transparent;
         }
@@ -109,9 +141,13 @@
     font-size: 28px;
     text-align: center;
     animation: 1.6s ease infinite wheel-up-down !important;
+    @include mobile {
+      top: 262px;
+      left: 42%; 
+    }
     i {
       
-      color: #fff;
+      color: #fff; 
     }
   }
 }
