--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,20 +14,20 @@
       </div>
     </div>
   <nav class="navbar navbar-expand-md navbar-fixed-top">
-    <a href="#" class="navbar navbar-brand logo-text">
-      <h2>Order Management</h2>
-    </a>
-    <button
-      class="navbar-toggler navbar-toggler-right"
-      type="button"
-      data-toggle="collapse"
-      data-target="#menu"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="d-flex">
+      <a href="#" class="navbar navbar-brand logo-text">
+        <h2>Order Management</h2>
+      </a>
+      <button
+        class="btn btn-xsm navbar-toggler navbar-toggler-right menu-btn"
+        data-toggle="collapse"
+        data-target="#menu"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
+      </button>
+    </div>  
     <div class="collapse navbar-collapse justify-content-end" id="menu">
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active">
