--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    font-family: poppins,Arial,sans-serif;
+    // font-family: poppins,Arial,sans-serif;
     font-size: 15px;
     line-height: 1.8;
     font-weight: 400;
     color: gray;
 }
+
