--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -5,24 +5,31 @@
           <div class="userdata">
               <div class=" form-group form-fields">
                   <label class="col-md-3">Name:</label>
-                  <input class="col-md-6 form-control" readonly value="{{ userDetails.owner_name }}"/>
+                  <input class="col-md-6 form-control" readonly value="{{ user.owner_name }}"/>
               </div>
               <div class=" form-group form-fields">
                   <label class="col-md-3">Email:</label>
-                  <input class="col-md-6 form-control"   readonly value="{{ userDetails.email }}" />
+                  <input class="col-md-6 form-control"   readonly value="{{ user.email }}" />
               </div>
               <div class=" form-group form-fields">
                   <label class="col-md-3">Phone No:</label>
-                  <input class="col-md-6 form-control" readonly value="{{ userDetails.mobile_number }}" />
+                  <input class="col-md-6 form-control" readonly value="{{ user.mobile_number }}" />
               </div>
               <div class=" form-group form-fields">
                   <label class="col-md-3">Reference Number:</label>
-                  <input class="col-md-6 form-control"  value="" placeholder="(optional)" (input)="referenceNumber($event.target.value)">
+                  <input class="col-md-6 form-control" value=""  (input)="referenceNumber($event.target.value)">
+                  <div>
+                    <p>{{refNumberMessage}}</p>
+                </div>
               </div>
               <div class=" form-group form-fields">
                 <label class="col-md-3">Reference Name:</label>
-                <input class="col-md-6 form-control"  value="" placeholder="(optional)" (input)="referenceName($event.target.value)"/>
+                <input class="col-md-6 form-control"  value=""  (input)="referenceName($event.target.value)"/>
+                <div>
+                    <p>{{refNameMessage}}</p>
+                </div>
             </div>
+            
               <div class="button">
                   <button class="btn btn-primary" (click) = "addNewDeliveryAddress()">Add New Address</button>
               </div>
