changes in about,cart,checkout,

--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -29,6 +29,9 @@
               <button class="btn btn-lg btn-block mb-1" type="submit" [disabled]="loginForm.invalid">Sign in</button>
             </form>
           </div>
+          <!-- <div *ngIf="loadheaderComponent">
+            <app-header></app-header>
+          </div> -->
         </div>
         <a class="float-right" [routerLink]="['/signUp']">Create an account </a>
       </div>
