--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="about-img">
-          <img src="../../assets/aboutIMG1.jpg" alt="aboutImage">
+          <img src="assets/aboutIMG1.jpg" alt="aboutImage">
         </div>
       </div>
       <div class="col-md-6">
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="customer-profile">
-                <img src="../../assets/user.jpg" alt="">
+                <img src="assets/user.jpg" alt="">
               </div>
               <div class="customer-desc">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
@@ -39,7 +39,7 @@
             </div>    
             <div class="col-md-4">
               <div class="customer-profile">
-                <img src="../../assets/user.jpg" alt="">
+                <img src="assets/user.jpg" alt="">
               </div>
               <div class="customer-desc">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
@@ -51,7 +51,7 @@
             </div> 
             <div class="col-md-4">
               <div class="customer-profile">
-                <img src="../../assets/user.jpg" alt="">
+                <img src="assets/user.jpg" alt="">
               </div>
               <div class="customer-desc">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, illum ea? Doloremque tenetur, quos eos natus animi</p>
